--- a/table.html
+++ b/table.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
 <head>
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
@@ -15,10 +16,11 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <!-- This is used to add boostrap - font awesome icons -->
   <script src="https://kit.fontawesome.com/255f3d09d1.js" crossorigin="anonymous"></script>
-  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css"
+    rel="stylesheet">
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 </head>
-  
+
 <body>
   <nav class="navbar fixed-top navbar-dark bg-info">
     <span class="navbar-brand mb-0 h1">
@@ -28,6 +30,65 @@
       Student Expense Tracker
     </span>
   </nav>
+
+
+  <form action="#">
+    <div class="form-row">
+      <div class="form-group col-md-2">
+        <label for="">Date</label>
+        <input class=" form-control" type="date" name="date" id="">
+      </div>
+
+      <div class="col form-group col-md-2">
+        <label for="">Description</label>
+        <input class="form-control" type="text" name="description" id="">
+      </div>
+
+      <div class="form-group col-md-2">
+        <label for="">Category</label>
+        <select class="form-control" name="" id="">
+          <option value="mortgage">Mortgage & Rent</option>
+          <option value="charity">Charity</option>
+          <option value="tuition">Tutition</option>
+          <option value="groceries">Groceries</option>
+          <option value="gas">Gas & Fuel</option>
+          <option value="shopping">Shopping</option>
+          <option value="fast_food">Fast Food</option>
+          <option value="income">Income</option>
+        </select>
+      </div>
+
+      <div class="form-group col-md-2">
+        <label for="">Amount</label>
+        <input class="form-control" type="text">
+      </div>
+    </div> <!-- /.row -->
+
+    <div class="form-row">
+      <div class="form-group col-md-2">
+        <label for="">Type</label>
+        <select class="form-control" name="" id="">
+          <option value="">Cash</option>
+          <option value="">Check</option>
+          <option value="">Pending</option>
+        </select>
+      </div>
+
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="type" id="" value="expense">
+        <label class="form-check-label" for="">Expense</label>
+      </div>
+      <div class='form-check form-check-inline'>
+        <input class="form-check-input" type="radio" name="type" id="" value="income">
+        <label class="form-check-label" for="">Income</label>
+      </div>
+    </div> <!-- /.form-row -->
+
+    <div class="form-row">
+      <button>Add</button>
+    </div>
+  </form>
+
   <table class="table table-striped">
     <thead class="thead-dark">
       <!-- This is the Top of the table. Includes Date, Description, Category, and Amount -->
@@ -43,9 +104,9 @@
       <tr>
         <th scope="row">
           <!-- Input Checkbox and Inputs for date, desc, categ, and amount. -->
-          <!-- CHAD - Insert/Edit Form Here -->  
+          <!-- CHAD - Insert/Edit Form Here -->
           <!-- So far it is a basic input within the table itself. -->
-          <input type="checkbox"> 
+          <input type="checkbox">
           <input type="date" placeholder="Date">
         </th>
         <td>
@@ -58,59 +119,67 @@
           <input type="text" placeholder="$">
         </td>
       </tr>
-      <tr> 
-        <!-- Random Expense Info for basic outline/prototype of Tracker --> 
+      <tr>
+        <!-- Random Expense Info for basic outline/prototype of Tracker -->
         <th scope="row">
-          <input type="checkbox"> 10/20/21</th>
+          <input type="checkbox"> 10/20/21
+        </th>
         <td>Broulims</td>
         <td>Groceries</td>
         <td>$24.56</td>
       </tr>
       <tr>
         <th scope="row">
-          <input type="checkbox"> 10/18/21</th>
+          <input type="checkbox"> 10/18/21
+        </th>
         <td>Brigham Young University - Idaho</td>
         <td>School Supplies</td>
         <td>$11.00</td>
       </tr>
       <tr>
         <th scope="row">
-          <input type="checkbox"> 10/16/21</th>
+          <input type="checkbox"> 10/16/21
+        </th>
         <td>Adam's Mongolian Grill</td>
         <td>Restaurants</td>
         <td>$34.56</td>
       </tr>
       <tr>
         <th scope="row">
-          <input type="checkbox"> 10/13/21</th>
+          <input type="checkbox"> 10/13/21
+        </th>
         <td>Amazon</td>
         <td>Shopping</td>
         <td>$13.74</td>
       </tr>
       <tr>
         <th scope="row">
-          <input type="checkbox"> 10/12/21</th>
+          <input type="checkbox"> 10/12/21
+        </th>
         <td>Costco</td>
         <td>Gas & Fuel</td>
         <td>$66.12</td>
       </tr>
       <tr>
         <th scope="row">
-          <input type="checkbox"> 10/09/21</th>
+          <input type="checkbox"> 10/09/21
+        </th>
         <td>Walmart</td>
         <td>Groceries</td>
         <td>$30.56</td>
       </tr>
       <tr>
         <th scope="row">
-          <input type="checkbox"> 10/03/21</th>
+          <input type="checkbox"> 10/03/21
+        </th>
         <td>Autozone</td>
         <td>Car Maint.</td>
         <td>$45.72</td>
       </tr>
       <tr>
         <th scope="row">
-          <input type="checkbox"> 10/01/21</th>
+          <input type="checkbox"> 10/01/21
+        </th>
         <td>Chik-fil-A</td>
         <td>Restaurants</td>
         <td>$14.33</td>
@@ -119,4 +188,5 @@
   </table>
 
 </body>
+
 </html>
