--- a/table.html
+++ b/table.html
@@ -24,16 +24,16 @@
 </head>
 
 <body>
-  <nav class="navbar fixed-top navbar-dark bg-info">
-    <span class="navbar-brand mb-0 h1">
+  <nav class="navbar fixed-top navbar-light bg-primary">
+    <span class="navbar-brand mb-0 ">
       <!-- This is the money icon -->
       <i class="fas fa-money-bill-wave"></i>
       <!-- Title -->
       Student Expense Tracker
     </span>
-    <button type="button" class="btn pull-right " data-toggle="modal" data-target="#exampleModal">
+    <!-- <button type="button" class="btn pull-right btn-secondary" data-toggle="modal" data-target="#exampleModal">
       Chart
-    </button>
+    </button> -->
     <span> </span>
   </nav>
 
@@ -95,122 +95,139 @@
     </div>
   </form>
 
-  <table class="table table-striped">
-    <thead class="thead-dark">
-      <!-- This is the Top of the table. Includes Date, Description, Category, and Amount -->
-      <tr>
-        <th scope="col"> Date</th>
-        <th scope="col">Description</th>
-        <th scope="col">Category</th>
-        <th scope="col">Amount</th>
-      </tr>
-    </thead>
-    <tbody>
-      <!-- This is the body of the table. It starts with a Form to add an expense row. -->
-      <tr>
-        <th scope="row">
-          <!-- Input Checkbox and Inputs for date, desc, categ, and amount. -->
-          <!-- CHAD - Insert/Edit Form Here -->
-          <!-- So far it is a basic input within the table itself. -->
-          <input type="checkbox">
-          <input type="date" placeholder="Date">
-        </th>
-        <td>
-          <input type="text" placeholder="Description">
-        </td>
-        <td>
-          <input type="text" placeholder="Category">
-        </td>
-        <td>
-          <input type="text" placeholder="$">
-        </td>
-      </tr>
-      <tr>
-        <!-- Random Expense Info for basic outline/prototype of Tracker -->
-        <th scope="row">
-          <input type="checkbox"> 10/20/21
-        </th>
-        <td>Broulims</td>
-        <td>Groceries</td>
-        <td>$24.56</td>
-      </tr>
-      <tr>
-        <th scope="row">
-          <input type="checkbox"> 10/18/21
-        </th>
-        <td>Brigham Young University - Idaho</td>
-        <td>School Supplies</td>
-        <td>$11.00</td>
-      </tr>
-      <tr>
-        <th scope="row">
-          <input type="checkbox"> 10/16/21
-        </th>
-        <td>Adam's Mongolian Grill</td>
-        <td>Restaurants</td>
-        <td>$34.56</td>
-      </tr>
-      <tr>
-        <th scope="row">
-          <input type="checkbox"> 10/13/21
-        </th>
-        <td>Amazon</td>
-        <td>Shopping</td>
-        <td>$13.74</td>
-      </tr>
-      <tr>
-        <th scope="row">
-          <input type="checkbox"> 10/12/21
-        </th>
-        <td>Costco</td>
-        <td>Gas & Fuel</td>
-        <td>$66.12</td>
-      </tr>
-      <tr>
-        <th scope="row">
-          <input type="checkbox"> 10/09/21
-        </th>
-        <td>Walmart</td>
-        <td>Groceries</td>
-        <td>$30.56</td>
-      </tr>
-      <tr>
-        <th scope="row">
-          <input type="checkbox"> 10/03/21
-        </th>
-        <td>Autozone</td>
-        <td>Car Maint.</td>
-        <td>$45.72</td>
-      </tr>
-      <tr>
-        <th scope="row">
-          <input type="checkbox"> 10/01/21
-        </th>
-        <td>Chik-fil-A</td>
-        <td>Restaurants</td>
-        <td>$14.33</td>
-      </tr>
-    </tbody>
-  </table>
-
-  <!-- This is the modal that pulls up when the user selects "Charts" -->
-<div class="modal" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="pieChart">Finances Pie Chart</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div id="piechart"></div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+  <div class="row">
+      <div class="col-sm-2"></div>
+    <div class="col-sm-5">
+      <div class="card w-50 " >
+        <div class="card-body">
+          <table class="table table-striped table-bordered table-hover table-responsive">
+            <div class="col-md-6 column">
+              <thead class="thead-light">
+                <!-- This is the Top of the table. Includes Date, Description, Category, and Amount -->
+                <tr>
+                  <th scope="col "> Date</th>
+                  <th scope="col">Description</th>
+                  <th scope="col">Category</th>
+                  <th scope="col">Amount</th>
+                </tr>
+              </thead>
+              <tbody>
+                <!-- This is the body of the table. It starts with a Form to add an expense row. -->
+                <tr>
+                  <!-- <th scope="row">
+                    Input Checkbox and Inputs for date, desc, categ, and amount.
+                    CHAD - Insert/Edit Form Here
+                    So far it is a basic input within the table itself.
+                    <input type="checkbox">
+                    <input type="date" placeholder="Date">
+                  </th>
+                  <td>
+                    <input type="text" placeholder="Description">
+                  </td>
+                  <td>
+                    <input type="text" placeholder="Category">
+                  </td>
+                  <td>
+                    <input type="text" placeholder="$">
+                  </td>
+                </tr> -->
+                <tr>
+                  <!-- Random Expense Info for basic outline/prototype of Tracker -->
+                  <th scope="row">
+                    <input type="checkbox"> 10/20/21
+                  </th>
+                  <td>Broulims</td>
+                  <td>Groceries</td>
+                  <td>$24.56</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <input type="checkbox"> 10/18/21
+                  </th>
+                  <td>Brigham Young University - Idaho</td>
+                  <td>School Supplies</td>
+                  <td>$11.00</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <input type="checkbox"> 10/16/21
+                  </th>
+                  <td>Adam's Mongolian Grill</td>
+                  <td>Restaurants</td>
+                  <td>$34.56</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <input type="checkbox"> 10/13/21
+                  </th>
+                  <td>Amazon</td>
+                  <td>Shopping</td>
+                  <td>$13.74</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <input type="checkbox"> 10/12/21
+                  </th>
+                  <td>Costco</td>
+                  <td>Gas & Fuel</td>
+                  <td>$66.12</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <input type="checkbox"> 10/09/21
+                  </th>
+                  <td>Walmart</td>
+                  <td>Groceries</td>
+                  <td>$30.56</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <input type="checkbox"> 10/03/21
+                  </th>
+                  <td>Autozone</td>
+                  <td>Car Maint.</td>
+                  <td>$45.72</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <input type="checkbox"> 10/01/21
+                  </th>
+                  <td>Chik-fil-A</td>
+                  <td>Restaurants</td>
+                  <td>$14.33</td>
+                </tr>
+              </tbody>
+            </table>
+        </div>
       </div>
     </div>
-  </div>
+    <!-- This is the modal that pulls up when the user selects "Charts" -->
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-body">
+          <div id="piechart"></div>
+          <!-- This is the modal that pulls up when the user selects "Charts" -->
+          <!-- <div class="modal" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="pieChart">Finances Pie Chart</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <div id="piechart"></div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div> -->
+        </div>
+      </div>
+    </div>
 </div>
 
 </body>
@@ -223,16 +240,15 @@ google.charts.setOnLoadCallback(drawChart);
 function drawChart() {
   var data = google.visualization.arrayToDataTable([
   ['Task', 'Hours per Day'],
-  ['Work', 8],
-  ['Friends', 2],
-  ['Eat', 2],
-  ['TV', 2],
-  ['Gym', 2],
-  ['Sleep', 8]
+  ['Groceries', 55.12],
+  ['School Supplies', 11.00],
+  ['Restaurants', 48.89],
+  ['Gas & Fuel', 66.12],
+  ['Car Maint.', 45.72]
 ]);
 
   // Optional; add a title and set the width and height of the chart
-  var options = {'title':'My Average Day', 'width':550, 'height':400};
+  var options = {'title':'Finance Breakdown', 'width':550, 'height':400};
 
   // Display the chart inside the <div> element with id="piechart"
   var chart = new google.visualization.PieChart(document.getElementById('piechart'));
