removed values from form inputs

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <div class="col form-group col-md-2">
         <label for="">Description</label>
-        <input class="form-control" type="text" name="description" id="description" value="tacobell">
+        <input class="form-control" type="text" name="description" id="description">
       </div>
 
       <div class="form-group col-md-2">
@@ -60,7 +60,7 @@
 
       <div class="form-group col-md-2">
         <label for="">Amount</label>
-        <input class="form-control" type="text" name='amount' id="amount" value="12.35">
+        <input class="form-control" type="text" name='amount' id="amount">
       </div>
     </div> <!-- /.row -->
 
