--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
       <!-- This is the money icon -->
       <i class="fas fa-money-bill-wave"></i>
       <!-- Title -->
-      Student Expense Tracker
+      Student Expense Tracker!
     </span>
   </nav>
-
 
   <form action="#" id="add-item-form">
     <div class="form-row">
