--- a/index.html
+++ b/index.html
@@ -1,60 +1,58 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="styles.css">
-  <!--Load the AJAX API (for Google Charts)-->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Student Expense Tracker</title>
+  <!--Google Charts JS-->
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-  <!-- This is used to add boostrap - font awesome icons -->
-  <script src="https://kit.fontawesome.com/255f3d09d1.js" crossorigin="anonymous"></script>
-  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css"
-    rel="stylesheet">
-  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-  <nav class="navbar fixed-top navbar-dark bg-primary">
-    <span class="navbar-brand mb-0 h1">
-      <!-- This is the money icon -->
-      <i class="fas fa-money-bill-wave"></i>
-      <!-- Title -->
-      Student Expense Tracker!
-    </span>
-  </nav>
+  <div class="container">
+    <!-- Header -->
+    <h1>Student Expense Tracker</h1>
+    <!-- End Header -->
 
-  <!-- Megan: Added a card holder for grid template -->
-  <div class="row">
-    <div class="col-sm-1">
-      <div class="card">
-        <div class="card-body">
-        </div>
+    <!-- Chart -->
+    <div class="row">
+      <div class="card col">
+        <div id="chart_div"></div>
       </div>
-    </div>
-    <div class="col-sm-11">
-      <div class="card">
-        <div class="card-body">
-        <form action="#" id="add-item-form">
-          <div class="form-row">
-            <div class="form-group col-md-2">
-              <label for="">Date</label>
-              <input class=" form-control" type="date" name="date" id="date">
-            </div>
+    </div> <!-- /.row -->
+    <!-- End Chart -->
 
-            <div class="col form-group col-md-2">
-              <label for="">Description</label>
-              <input class="form-control" type="text" name="description" id="description">
+    <!-- Add Item Form -->
+    <div class="row">
+      <div class="col">
+        <form class="needs-validation card p-2" novalidate>
+          <div class="row">
+            <div class="col-md-3 mb-3">
+              <label for="date">Date</label>
+              <input type="date" class="form-control" id="date" placeholder="" value="" required>
+              <div class="invalid-feedback">
+                Valid date is required.
+              </div>
             </div>
-
-            <div class="form-group col-md-2">
-              <label for="">Category</label>
-              <select class="form-control" name="category" id="category">
+            <div class="col-md-3 mb-3">
+              <label for="description">Description</label>
+              <input type="text" class="form-control" id="description" placeholder="" value="" required>
+              <div class="invalid-feedback">
+                Valid Description is required.
+              </div>
+            </div>
+            <div class="col-md-3 mb-3">
+              <label for="category">Category</label>
+              <select class="custom-select d-block w-100" id="category" required>
+                <option value="">Choose...</option>
                 <option value="mortgage">Mortgage & Rent</option>
                 <option value="charity">Charity</option>
                 <option value="tuition">Tutition</option>
@@ -64,97 +62,97 @@
                 <option value="fast_food">Fast Food</option>
                 <option value="income">Income</option>
               </select>
+              <div class="invalid-feedback">
+                Please select a valid category.
+              </div>
             </div>
-
-            <div class="form-group col-md-2 ">
-              <label for="">Amount</label>
-              <input class="form-control" type="text" name='amount' id="amount">
+            <div class="col-md-3 mb-3">
+              <label for="amount">Amount</label>
+              <input type="number" class="form-control" id="amount" placeholder="" value="" required>
+              <div class="invalid-feedback">
+                Valid amount is required.
+              </div>
             </div>
           </div> <!-- /.row -->
 
-          <div class="form-row">
-            <div class="form-group col-md-2">
-              <label for="">Type</label>
-              <select class="form-control" name="tender" id="tender">
+          <div class="row align-items-center">
+            <div class="col-md-3 mb-3">
+              <label for="tender">Tender</label>
+              <select class="custom-select d-block w-100" id="tender" required>
+                <option value="">Choose...</option>
                 <option value="cash">Cash</option>
                 <option value="check">Check</option>
-                <option value="pending">Pending</option>
+                <option value="direct deposit">Direct Deposit</option>
+                <option value="Credit">Credit</option>
               </select>
+              <div class="invalid-feedback">
+                Please select a valid tender.
+              </div>
             </div>
-
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="type" id="radio-expense" value="expense">
-              <label class="form-check-label" for="radio-expense">Expense</label>
+            <div class="col-auto">
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                  value="option1">
+                <label class="form-check-label" for="inlineRadio1">Expense</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                  value="option2">
+                <label class="form-check-label" for="inlineRadio2">Income</label>
+              </div>
             </div>
-            <div class='form-check form-check-inline'>
-              <input class="form-check-input" type="radio" name="type" id="radio-income" value="income">
-              <label class="form-check-label" for="radio-income">Income</label>
-            </div>
-          </div> <!-- /.form-row -->
-        </div>
+          </div> <!-- /.row .align-items-center-->
+          <hr class="mb-4">
+          <button class="btn btn-primary btn-lg btn-block" type="submit">Submit</button>
+        </form>
       </div>
-    </div>
+    </div> <!-- /.row -->
+    <!-- End Add Item Form -->
 
-    <!-- Added a card holder for the Add item button. -->
+    <!-- Item Table -->
     <div class="row">
-      <div class="col-sm-1">
-        <div class="card">
-          <div class="card-body">
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-1">
-        <div class="card">
-          <div class="card-body">
-            <div class="form-row">
-              <button class= "btn btn-primary" type='submit' id="add-item">Add Item</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+      <div class="col order-md-1">
+        <table class="table table-striped">
+          <thead class="thead-dark">
+            <!-- This is the Top of the table. Includes Date, Description, Category, and Amount -->
+            <tr>
+              <th scope="col"> Date</th>
+              <th scope="col">Description</th>
+              <th scope="col">Category</th>
+              <th scope="col">Amount</th>
+            </tr>
+          </thead>
+          <tbody id="tbody">
 
-  </form>
-  <div class="row">
-    <div class="col-sm-1">
-      <div class="card">
-        <div class="card-body">
-        </div>
+          </tbody>
+        </table>
       </div>
-    </div>
-    <div class="col-sm-6">
-      <div class="card">
-        <div class="card-body">
-          <table class="table table-striped">
-            <thead class="thead-dark">
-              <!-- This is the Top of the table. Includes Date, Description, Category, and Amount -->
-              <tr>
-                <th scope="col"> Date</th>
-                <th scope="col">Description</th>
-                <th scope="col">Category</th>
-                <th scope="col">Amount</th>
-              </tr>
-            </thead>
-            <tbody id="tbody">
-              
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-5">
-      <div class="card">
-        <div class="card-body">
-          <div id="chart_div"></div>
-        </div>
-      </div>
-    </div>
-  </div>
+    </div> <!-- /.row -->
+    <!-- End Item Table -->
+
+  </div> <!-- /.container -->
+
+  <footer class="my-5 pt-5 text-muted text-center text-small">
+    <p class="mb-1">&copy; 2017-2018 Company Name</p>
+    <ul class="list-inline">
+      <li class="list-inline-item"><a href="#">Privacy</a></li>
+      <li class="list-inline-item"><a href="#">Terms</a></li>
+      <li class="list-inline-item"><a href="#">Support</a></li>
+    </ul>
+  </footer>
 
   <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <!-- Bootrap JS Bundle -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <!-- Popper.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
   <!-- Custom Scripts -->
   <script src="scripts.js"></script>
 </body>
