added a budget page
added a budget.html and budget.js

--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-  <div class="card text-white bg-success">
-    <div class="card-body">
-      <h5 class="card-title text-center font-weight-bold">Student Expense Tracker</h5>
-    </div>
-  </div>
-
+  <nav class="navbar bg-success text-white font-weight-bold justify-content-between">
+    <a class="navbar-brand ">Student Expense Tracker</a>
+    <form class="form-inline">
+      <a href="budget.html"><i class="fas fa-money-bill-wave fa-3x"></i></a>
+      </form>
+    </nav>
   <div class="card ">
     <div class="card-body">
       <form id="add-item-form">
