--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     
     function drawChart() {
       var data = google.visualization.arrayToDataTable([
-        ['Task', 'Hours per Day'],
+        ['Task', 'Hours Per Day'],
         ['Mortgage', 3],
         ['Groceries', 1],
         ['Gas', 1],
